--- a/environment/development/docker-compose.yml
+++ b/environment/development/docker-compose.yml
@@ -56,5 +56,16 @@ services:
     volumes:
       - ./phpmyadmin/sessions:/sessions
 
+  mail:
+    image: mailhog/mailhog
+    container_name: mailhog
+    ports:
+      - "8025:8025"
+    environment:
+      MH_STORAGE: maildir
+      MH_MAILDIR_PATH: /tmp
+    volumes:
+      - maildir:/tmp
 volumes:
   mysql:
+  maildir: {}
